# hackillinois25

./: R.md  README.md  clifront.py  combined_libs.py  common_libs.csv  find_libs.py  index.html  libraryfetcher.py  maven_common_libraries.csv  output.csv  output_python.csv  php_common_libraries.csv  pyproject.toml  quick.py  ruby_common_libraries.csv  scraped.txt  script.py  setup.py
alexandria/: cli.py  cli.py.bak
alexandria.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clifrontend/: clifront.py  index.html
common_libraries/: nuget_common_libraries.csv  rust_common_libraries.csv
hackillinois25/: cli.py
hackillinois25.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
libfetch/: combined_libs.py  libraryfetcher.py
libfetch/backup/: README.md
libfetch/backup/library_links/: go_libraries.csv  maven_libraries.csv  node_libraries.csv  (+3 more)
libfetch/common_libraries/: go_common_libraries.csv  node_common_libraries.csv  python_common_libraries.csv
libfetch/test_files/: App.java  a.py  b.py  main.rs
library_links/: maven_libraries.csv  node_libraries.csv  nuget_libraries.csv  php_libraries.csv  python_libraries.csv  ruby_libraries.csv  rust_libraries.csv
scraping/: Output.txt  api_docs.index  code_scrape_test.py  doc_tree.json  output.txt  query_processing.py  scrape.py  scraped.txt  scraper.py  search.py  structured_docs.json  test.py  test_link_fetch.py  test_model_query.py
test_files/: Program.cs  test2.txt
tests/: test_libfetch.py  test_scraping.py  test_search.py
tests/.alexandria/: combined_libraries.json
tests/workspace/: main.py
(+16 files in other folders)
