[project]
name = "alexandria"
version = "0.1.0"
description = "A CLI tool for managing libraries and documentation."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "click",
    "textual",
    "requests",
    "prompt_toolkit",
    "rich",
    "sentence-transformers",
    "rank-bm25",
    "faiss-cpu",
    "ollama"
]

[tool.setuptools.packages.find]
include = ["alexandria", "clifrontend", "scraping", "libfetch"]

[project.scripts]
alexandria = "alexandria.cli:cli"
